--- a/testTEST.html
+++ b/testTEST.html
@@ -8,3 +8,6 @@
 
 </body>
 </html>
+$username = mysql_real_escape_string($_POST['username']);
+$password = mysql_real_escape_string($_POST['password']);
+$email = mysql_real_escape_string($_POST['email']);
